tests/snapshots/snapshot_tests__snap_mir_if_else.snap
---
source: tests/snapshot_tests.rs
expression: mir_snap(src)
---
[E1002] duplicate definition of `abs` in the same scope
