tests/snapshots/snapshot_tests__snap_mir_while_loop.snap
---
source: tests/snapshot_tests.rs
expression: mir_snap(src)
---
fn count(): #0 {
  val _0: #0
  val mut _1: #5 // i
  val _2: #3
  val _3: #5

  bb0: {
    StorageLive(_1)
    _1 = const 0_i64
    goto -> bb1
  }
  bb1: {
    _2 = Lt(_1, const 10_i64)
    switchInt(_2): [1: bb2, otherwise: bb3]
  }
  bb2: {
    _3 = Add(_1, const 1_i64)
    _1 = _3
    goto -> bb1
  }
  bb3: {
    _0 = const ()
    return
  }
}

fn main(): #0 {
  val _0: #0
  val _1: #0

  bb0: {
    _1 = call const "count"(): bb1
  }
  bb1: {
    _0 = const ()
    return
  }
}
