tests/snapshots/snapshot_tests__snap_parse_closure.snap
---
source: tests/snapshot_tests.rs
expression: parse_snap(src)
---
[E0001] unexpected character '|' (did you mean '||'?)
[E0001] unexpected character 'x'
[E0001] unexpected character '|' (did you mean '||'?)
[E0001] unexpected character ' '
