tests/snapshots/snapshot_tests__snap_parse_enum_declaration.snap
---
source: tests/snapshot_tests.rs
expression: parse_snap(src)
---
{
  "items": [
    {
      "kind": {
        "Enum": {
          "name": "Color",
          "generics": [],
          "variants": [
            {
              "name": "Red",
              "fields": "Unit",
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 3,
                  "column": 5
                },
                "end": {
                  "file": "test.axon",
                  "line": 3,
                  "column": 9
                }
              }
            },
            {
              "name": "Green",
              "fields": "Unit",
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 4,
                  "column": 5
                },
                "end": {
                  "file": "test.axon",
                  "line": 4,
                  "column": 11
                }
              }
            },
            {
              "name": "Blue",
              "fields": "Unit",
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 5,
                  "column": 5
                },
                "end": {
                  "file": "test.axon",
                  "line": 5,
                  "column": 10
                }
              }
            },
            {
              "name": "Custom",
              "fields": {
                "Tuple": [
                  {
                    "kind": {
                      "Named": "Int64"
                    },
                    "span": {
                      "start": {
                        "file": "test.axon",
                        "line": 6,
                        "column": 12
                      },
                      "end": {
                        "file": "test.axon",
                        "line": 6,
                        "column": 18
                      }
                    }
                  },
                  {
                    "kind": {
                      "Named": "Int64"
                    },
                    "span": {
                      "start": {
                        "file": "test.axon",
                        "line": 6,
                        "column": 19
                      },
                      "end": {
                        "file": "test.axon",
                        "line": 6,
                        "column": 25
                      }
                    }
                  },
                  {
                    "kind": {
                      "Named": "Int64"
                    },
                    "span": {
                      "start": {
                        "file": "test.axon",
                        "line": 6,
                        "column": 26
                      },
                      "end": {
                        "file": "test.axon",
                        "line": 6,
                        "column": 32
                      }
                    }
                  }
                ]
              },
              "span": {
                "start": {
                  "file": "test.axon",
                  "line": 6,
                  "column": 5
                },
                "end": {
                  "file": "test.axon",
                  "line": 6,
                  "column": 33
                }
              }
            }
          ],
          "span": {
            "start": {
              "file": "test.axon",
              "line": 2,
              "column": 1
            },
            "end": {
              "file": "test.axon",
              "line": 8,
              "column": 1
            }
          }
        }
      },
      "span": {
        "start": {
          "file": "test.axon",
          "line": 2,
          "column": 1
        },
        "end": {
          "file": "test.axon",
          "line": 8,
          "column": 1
        }
      },
      "visibility": "Private",
      "attributes": []
    }
  ],
  "span": {
    "start": {
      "file": "test.axon",
      "line": 2,
      "column": 1
    },
    "end": {
      "file": "test.axon",
      "line": 8,
      "column": 1
    }
  }
}
